# sts-gen

./: .gitignore  CLAUDE.md  COMMAND.md  pyproject.toml
data/vanilla/: encounters.json  enemies.json  ironclad_cards.json  potions.json  relics.json  status_effects.json
docs/: FOUNDATION.md  PHASE2.md  PHASE3B.md  ROADMAP.md
scripts/: build_mod.py  compare_agents.py  demo_combat_deep.py  demo_triggers.py  diagnose_agent.py  generate_baselines.py  install_mod.sh  setup_and_build.sh  stress_test_pipeline.py
src/sts_gen/agents/: __init__.py  client.py  designer.py  schemas.py  tools.py
src/sts_gen/balance/: __init__.py  baselines.py  metrics.py  models.py  report.py
src/sts_gen/ir/: __init__.py  actions.py  cards.py  content_set.py  keywords.py  potions.py  relics.py  status_effects.py
src/sts_gen/mod_builder/: builder.py  project.py
src/sts_gen/sim/: interpreter.py  relic_dispatcher.py  runner.py  telemetry.py  (+1 more)
tests/: test_registry_validation.py
tests/agents/: test_client.py  test_designer.py  test_schemas.py  test_tools.py
tests/balance/: test_baselines.py  test_metrics.py  test_models.py  test_report.py
tests/ir/: test_schema.py
tests/mod_builder/: test_actions.py  test_builder.py  test_cards.py  test_localization.py  test_naming.py  test_powers.py  test_project.py  test_relics.py  test_transpilability.py
tests/sim/: conftest.py  test_card_mechanics.py  test_enemies.py  test_full_act1.py  test_ground_truth.py  test_integration.py  test_interpreter.py  test_potions.py  test_powers.py  test_relics.py  test_triggers.py  test_unsimplified_cards.py
(+52 files in other folders)
